# multi-party-ecdsa

./: .gitignore  .rustfmt.toml  .travis.yml  BitcoinCore.io  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  RUNNING_ON_MOBILE.md  Rocket.toml  ZENGO_README.md  cloudbuild.yml  config.Rocket.toml  config.travis.yml  dinghy.toml  docker-compose.yml  kzen-dev-setup.sh  mpecdsa.py  mpecdsa_build.py  params  params.json  verify_signature.py
.cargo/: config
.github/workflows/: Basic.yml  Release.yml  build.yml  publish.yml  rust.yml
BigGuy573/: README.md
benches/multi_party_ecdsa/: mail.txt
benches/multi_party_ecdsa/bs21/: bench.sh  bench_steps.sh  keygen.rs
benches/multi_party_ecdsa/bs21/hyperfine/: BS21_compile.csv  BS21_keygen.csv  BS21_presign.csv  BS21_sign.csv
benches/multi_party_ecdsa/bs23/: bench.sh  bench_steps.sh  keygen.rs
benches/multi_party_ecdsa/gg18/: keygen.rs  multi_party_keygen.rs
benches/multi_party_ecdsa/gg20/: bench.sh  bench_steps.sh
benches/multi_party_ecdsa/gg20/hyperfine/: GG20_compile.csv  GG20_keygen.csv  GG20_presign.csv  GG20_sign.csv
benches/two_party_ecdsa/cclst_2019/: keygen.rs  sign.rs
benches/two_party_ecdsa/lindell_2017/: keygen.rs  sign.rs
demo/: docker_demo.sh  run.sh  run20.sh  run21.sh  run23.sh  run_in_docker.sh
demo/BigGuy573./demo/: demo_run20.sh
demo/bs21/: compile_sig.sh  keygen.sh  presign.sh  sign.sh
demo/bs23/: compile_sig.sh  keygen.sh  presign.sh  sign.sh
demo/gg20/: compile_sig.sh  keygen.sh  presign.sh  sign.sh
doc/: bench_logs_full.rtf  bench_logs_highlights.rtf
doc/diagrams/: keygen1.dot
docs/diagrams/: keygen1.dot  keygen2.dot
eth/: Cargo.toml
eth/client/: Cargo.toml  Rocket.toml
eth/client/src/: main.rs
eth/server/: Cargo.toml  Rocket.toml
eth/server/src/: main.rs
examples/: bs21_compile_sig.rs  bs21_keygen_client.rs  bs21_presign_client.rs  bs21_sign_client.rs  bs23_compile_sig.rs  bs23_keygen_client.rs  bs23_presign_client.rs  bs23_sign_client.rs  client.rs  common.rs  gg18_keygen_client.rs  gg18_sign_client.rs  gg18_sm_manager.rs  gg20_compile_sig.rs  gg20_keygen.rs  gg20_keygen_client.rs  gg20_keygen_shell.md  gg20_presign_client.rs  gg20_sign_client.rs  gg20_signing.rs  gg20_sm_client.rs  gg20_sm_manager.rs  party_client.rs  reshaing.rs  server.rs  sm_manager.rs
examples/common/: bs21.rs  bs23.rs  mod.rs
examples/gg20_signing/: gg20_sm_client.rs
src/: c_interface.rs  lib.rs
src/arithmetic/: big_gmp.rs  mod.rs  traits.rs
src/cryptographic_primitives/: mod.rs
src/cryptographic_primitives/commitments/: hash_commitment.rs  mod.rs  traits.rs
src/cryptographic_primitives/hashing/: hash_sha256.rs  mod.rs  traits.rs
src/cryptographic_primitives/proofs/: dlog_zk_protocol.rs  mod.rs
src/elliptic/: mod.rs  point.rs
src/elliptic/curves/: mod.rs  secp256_k1.rs  traits.rs
src/hashing/: hash_sha256.rs  traits.rs
src/party_1/: mod.rs
src/protocols/: mod.rs
src/protocols/multi_party_ecdsa/: mod.rs
src/protocols/multi_party_ecdsa/bs_2021/: blame.rs  mod.rs  orchestrate.rs  party_i.rs  test.rs
src/protocols/multi_party_ecdsa/bs_2023/: blame.rs  orchestrate.rs  party_i.rs  test.rs
src/protocols/multi_party_ecdsa/gg_2018/: mod.rs  mta.rs  party_i.rs  test.rs
src/protocols/multi_party_ecdsa/gg_2020/: blame.rs  mod.rs  orchestrate.rs  party_i.rs  test.rs
src/protocols/multi_party_ecdsa/gg_2020/state_machine/: keygen.rs  mod.rs  sign.rs  traits.rs
src/protocols/multi_party_ecdsa/gg_2020/state_machine/keygen/: rounds.rs
src/protocols/multi_party_ecdsa/gg_2020/state_machine/reshaing/: add_party_message.rs  error.rs  lib.rs  mod.rs  proof_of_fairness.rs  range_proofs.rs  refresh_message.rs  ring_pedersen_proof.rs  test.rs  zk_pdl_with_slack.rs
src/protocols/multi_party_ecdsa/gg_2020/state_machine/sign/: fmt.rs  rounds.rs
src/protocols/two_party_ecdsa/: mod.rs
src/protocols/two_party_ecdsa/cclst_2019/: mod.rs  party_one.rs  party_two.rs  test.rs
src/protocols/two_party_ecdsa/keygen_lindell17/: party_one.rs
src/protocols/two_party_ecdsa/lindell_2017/: mod.rs  party_one.rs  party_two.rs  structs.rs  test.rs  traits.rs
src/protocols/two_party_ecdsa/lindell_2017_keygen/: mod.rs  party_one.rs  party_two.rs  test.rs
src/protocols/two_party_ecdsa/lindell_2017_sign/: party_one.rs  party_two.rs  test.rs
src/protocols/two_party_ecdsa/party_two/: mod.rs
src/utilities/: mod.rs  zk_pdl.rs
src/utilities/mta/: mod.rs  range_proofs.rs  test.rs
src/utilities/zk_pdl/: mod.rs  test.rs
src/utilities/zk_pdl_with_slack/: mod.rs  test.rs
tests/: keygen_integ_test.rs  signing_integ_test.rs
